<resources>
    <string name="app_name">Swift Camera</string>
    <string name="but_name">图片</string>
    <string name="textview">TextView</string>
    <string name="func_bkg">功能按钮背景图片</string>
    <string name="settingDesc">功能按钮</string>
    <string name="cameraDesc">相机按钮</string>
    <string name="pictureDesc">相册按钮</string>
    <string name="myAlbum">我的相册</string>
    <string name="otherAlbum">其他相册</string>
    <string name="privacyAlbum">私密相册</string>
    <string name="select_count">已选(%1$s/9)</string>
    <string name="optimization">智能优化</string>
    <string name="camera">相机</string>
    <string name="processing">加工</string>
    <string name="edit">编辑</string>
    <string name="enhance">增强</string>
    <string name="specialEffects">特效</string>
    <string name="mosaic">马赛克</string>
    <string name="sticker">贴纸</string>
    <string name="cosmetology">美容</string>
    <string name="no_filter">原始</string>
    <string name="no_image">没有图片</string>
    <string name="all_image">全部图片</string>
    <string name="selected_ok">确定 (%1$s/%2$s)</string>
    <string name="grant_advice_read_album">请授予应用读取权限后再试</string>
    <string name="complete_select">完成</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
