<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="com.swift.camera.MainActivity"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        app:srcCompat="@mipmap/main_flow"
        android:contentDescription="@string/but_name" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/imageView"
        android:stretchColumns="*"
        android:id="@+id/tableLayout2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <com.swift.camera.ui.view.FunctionLayout
                android:id="@+id/rlOneLeyBeautify"
                />

            <com.swift.camera.ui.view.FunctionLayout
                android:id="@+id/rlBeautifyPictures"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.swift.camera.ui.view.FunctionLayout
                android:id="@+id/rlPuzzle"
                />

            <com.swift.camera.ui.view.FunctionLayout
                android:id="@+id/rlPictureInPicture"
                >

            </com.swift.camera.ui.view.FunctionLayout>
        </TableRow>
    </TableLayout>
    <ImageButton
        android:id="@+id/imgSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:background="#00000000"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/settingDesc" />

    <ImageButton
        android:id="@+id/imgCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/cameraDesc" />



    <ImageButton
        android:id="@+id/imgPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp"
        android:background="#00000000"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/pictureDesc" />


</RelativeLayout>